--- a/_DAW_2016_Clase/nbproject/project.properties
+++ b/_DAW_2016_Clase/nbproject/project.properties
@@ -1,5 +1,7 @@
+file.reference._DAW_2016_Clase-public_html=public_html
+file.reference._DAW_2016_Clase-test=test
 file.reference.BasicoHTML5-public_html=public_html
 file.reference.BasicoHTML5-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.BasicoHTML5-public_html}
-test.folder=${file.reference.BasicoHTML5-test}
+site.root.folder=${file.reference._DAW_2016_Clase-public_html}
+test.folder=${file.reference._DAW_2016_Clase-test}
