DIW video audio

--- a/_DAW_2016_Clase/nbproject/project.properties
+++ b/_DAW_2016_Clase/nbproject/project.properties
@@ -1,7 +1,15 @@
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+browser.autorefresh.Chrome=true
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome=true
+browser.highlightselection.Chrome.INTEGRATED=true
+browser.run=true
 file.reference._DAW_2016_Clase-public_html=public_html
 file.reference._DAW_2016_Clase-test=test
 file.reference.BasicoHTML5-public_html=public_html
 file.reference.BasicoHTML5-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference._DAW_2016_Clase-public_html}
+start.file=index.html
 test.folder=${file.reference._DAW_2016_Clase-test}
+web.context.root=/_DAW_2016_Clase
